Add profile functionality to header component \ Update user class, routes, letswork service for getting/setting user

--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -24,6 +24,8 @@
     </li>
     <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a>
     </li>
+    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" (click)="onProfile($event)">Profile</a>
+    </li>
   </ul>
   <!-- </div> -->
 </nav>
