--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -59,3 +59,4 @@
     <a class="nav-link active" [routerLink]="['/login']" routerLinkActive="active" style="text-align: center">Have an account? Login</a>
   </div>
 </div>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
