Remove username and password from user class \ Update login components and friends \ Use localStorage to store username

--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -20,8 +20,8 @@
         </div>
       </div>
       <button class="button" (click)="onSelect()">Login</button>
-      <a class="nav-link active" style="text-align: center" [routerLink]="['/login/signup']"
-        routerLinkActive="active">Sign Up</a>
+      <a class="nav-link active" style="text-align: center" [routerLink]="['/login/signup']" routerLinkActive="active"
+        (click)="onSignUp()">Sign Up</a>
     </div>
   </div>
 </div>
