Add username field to update-profile component

--- a/src/app/user-profile/update-profile/update-profile.component.html
+++ b/src/app/user-profile/update-profile/update-profile.component.html
@@ -10,7 +10,7 @@
                     card's
                     content.</p> -->
           <ul class="list-group list-group-flush" *ngIf="currentUser">
-            <li class="list-group-item">{{ currentUser.username }}</li>
+            <li class="list-group-item">{{ username }}</li>
             <li class="list-group-item">{{ currentUser.email }}
               <button type="button" class="btn btn-primary" (click)="changeEmail()">
                 Change Email
