--- a/src/app/authentication/admin/admin.component.html
+++ b/src/app/authentication/admin/admin.component.html
@@ -45,7 +45,11 @@
 
 <div class="container" style="padding: 5%" *ngIf="venueSelected">
   <div class="card">
-    <div class="card-header">VenueEdit</div>
+    <div class="row">
+      <div class="card-header">VenueEdit</div>
+      <span style="padding: 4%"></span>
+      <button class="btn btn-danger" id="save" (click)="delete()">Delete</button>
+    </div>
     <div class="card-body">
       <div class="row">
         <div class="col-4">
