--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -20,6 +20,8 @@
         </div>
       </div>
       <button class="button" (click)="onSelect()">Login</button>
+      <br/>
+      <div class="button g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
       <a class="nav-link active" style="text-align: center" [routerLink]="['/login/signup']" routerLinkActive="active"
         (click)="onSignUp()">Sign Up</a>
     </div>
