Add footer with dummy links and some styling

--- a/src/app/core/shell/footer/footer.component.html
+++ b/src/app/core/shell/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer-nav">
+  <div class="container text-center" id="footer-container">
+    <label id="footer-item"><a class="nav-link" routerLink="/">about</a> </label>
+    <label id="footer-item"><a class="nav-link" routerLink="/">careers</a></label>
+    <label id="footer-item"><a class="nav-link" routerLink="/">blog</a></label>
+    <label id="footer-item"><a class="nav-link" routerLink="/">let's connect</a></label>
+  </div>
+</footer>
