Made venue details responsive

--- a/src/app/home-page/home-page-search-box/home-page-search-box.component.css
+++ b/src/app/home-page/home-page-search-box/home-page-search-box.component.css
@@ -10,8 +10,7 @@ body, html {
   .bg-img {
     
     background-image: url("../../../assets/homepage.jpg");
-    /* height:auto; */
-    min-height: 706px;
+    height:89.3vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
