Add Ngx Spinner Service to admin page \ Update Admin Component, Auth Service tests to include NgxSpinnerModule

--- a/src/app/authentication/admin/admin.component.html
+++ b/src/app/authentication/admin/admin.component.html
@@ -1,3 +1,9 @@
+<div class="container">
+  <ngx-spinner bdColor="rgba(51, 51, 51, 0.65)" size="medium" color="#ffa" type="ball-scale-multiple">
+    <p style="font-size: 50px; color: black">Let's Work</p>
+  </ngx-spinner>
+</div>
+
 <div class="container" *ngIf="!venueSelected">
   <div class="row">
     <ul class="list-group">
