Integration of Aboutus

--- a/src/app/home-page/home-page-search-box/home-page-search-box.component.css
+++ b/src/app/home-page/home-page-search-box/home-page-search-box.component.css
@@ -51,3 +51,134 @@ body, html {
   .btn:hover {
     opacity: 0.8;
   }
+
+
+  body, html {
+    height: 100%;
+   
+  }
+  
+  * {
+    box-sizing: border-box;
+  }
+  
+  .bg-img {
+    
+    background-image: url("../../../assets/homepage.jpg");
+    /* height:auto; */
+    min-height: 706px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding-top:40px;
+    padding-left:40px;
+  }
+  .mat-card{
+    width:25em;
+    background-color: rgb(255, 255, 255,0.7)
+  }
+
+   .mat-card input[type=text], input[type=password] {
+    width: 100%;
+    padding: 15px;
+    margin-left:20px;
+    border: none;
+    background: #f1f1f1;
+  }
+  
+  .mat-card input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: slategrey;
+  }
+  
+  
+  .btn {
+    background-color:orangered;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+  }
+  
+  .btn:hover {
+    opacity: 0.8;
+  }
+
+  .button {
+    padding: 15px 25px;
+    font-size: 9.5px;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    color: #fff;
+    background-color: orangered;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    margin-left: 570px; 
+
+
+  }
+  
+  /* .button:hover {background-color: #3e8e41} */
+
+  .button:hover {
+    background-color: tomato;
+    color: white;
+  }
+  
+  .button:active {
+    background-color: orangered;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+  
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 5);
+    padding: 16px;
+    text-align: center;
+    background-color: lightslategray;
+    margin-top:10%; 
+  column-gap: 50px;
+  margin-left: 42px;
+
+  }
+  * {
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+    border-left: #fff;
+  }
+  
+  /* Float four columns side by side */ 
+   .column {
+    float: center; 
+    width: 100%;
+    padding: 0 10px;
+    column-gap: 30%;
+  }
+  
+  /* Remove extra left and right margins, due to padding */ 
+  .row {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+   /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
