--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -12,20 +12,32 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark nav">
   <!-- <div class="container-fluid"> -->
   <div class="navbar-header">
-    <a class="navbar-brand"><img src="assets/logo.png" class="logo"></a>
+    <a class="navbar-brand">
+      <img src="assets/logo.png" class="logo">
+    </a>
     <span class="navbar-brand">Let's Work</span>
   </div>
   <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/">Home</a>
+    </li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
-    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin($event)">Login</a>
+    <!-- <button class="button" (click)="submit1()">About Us</button> -->
+    <li class="nav-item">
+      <a class="nav-link" routerLink="display" (click)="submit1()">About Us</a>
     </li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a>
+    <li class="nav-item"  *ngIf="!isLoggedIn">
+      <a class="nav-link" routerLink="login" (click)="onLogin($event)">Login</a>
     </li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" (click)="onProfile($event)">Profile</a>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a>
+    </li>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a class="nav-link" (click)="onProfile($event)">Profile</a>
     </li>
   </ul>
-  <!-- </div> -->
 </nav>
+<!-- </div> -->
+<router-outlet></router-outlet>
