I have added components for payment validation

--- a/src/app/venues/details-page/read-details/read-details.component.html
+++ b/src/app/venues/details-page/read-details/read-details.component.html
@@ -56,7 +56,7 @@
 
           <label class="col-md-4 control-label" for="button"></label>
           <div class="col-md-8">
-            <button id="singlebutton" name="singlebutton" class="btn btn-primary" (click)="onSubmit()">Book
+            <button id="singlebutton" name="singlebutton" class="btn btn-primary" routerLink="book" >Book
               now!</button>
           </div>
 
@@ -66,3 +66,5 @@
 
   </div>
 </div>
+
+<router-outlet></router-outlet>
