--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -20,12 +20,9 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <!-- <li class="nav-item"><a class="nav-link" href="#">Sign Up</a></li> -->
-    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin($event)">Login</a>
-    </li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a>
-    </li>
-    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" (click)="onProfile($event)">Profile</a>
-    </li>
+    <li class="nav-item" *ngIf="!isLoggedIn"><a class="nav-link" routerLink="login" (click)="onLogin($event)">Login</a></li>
+    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" routerLink="/" (click)="onLogout($event)">Logout</a></li>
+    <li class="nav-item" *ngIf="isLoggedIn"><a class="nav-link" (click)="onProfile($event)">Profile</a></li>
   </ul>
   <!-- </div> -->
 </nav>
