--- a/src/app/booking/card/card.component.html
+++ b/src/app/booking/card/card.component.html
@@ -4,13 +4,12 @@
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form [formGroup]="myForm">
+<form [formGroup]="myForm" ngNativeValidate>
         <div class="modal-boy">
             <div class="container">
                 <div class="form-group">
                     <label for="username">Card name</label>
-                    <input type="text" placeholder="Name on the card" class="form-control" formControlName="cardname" [(ngModel)]="payment.card.cardName"
-                    />
+                    <input type="text" placeholder="Name on the card" class="form-control" formControlName="cardname" [(ngModel)]="payment.card.cardName" pattern="[a-zA-Z ]*" required/>
                 </div>
                 <div class="form-group">
                     <label for="password">Card number</label>
