--- a/src/app/venues/details-page/read-details/read-details.component.html
+++ b/src/app/venues/details-page/read-details/read-details.component.html
@@ -1,6 +1,11 @@
 <ngx-spinner bdColor="#333" size="medium" color="#fff" type="ball-circus">
   <p style="font-size: 20px; color:black;">Loading..</p>
 </ngx-spinner>
+<!-- <div *ngIf=errorflag>
+  <p style="margin: 200px">
+    Sorry!! there is no venue found .
+  </p>
+</div> -->
 <div *ngIf=flag>
   <div *ngIf="venue.image?.length">
     <mat-card class="slider">
