--- a/src/app/authentication/admin/admin.component.html
+++ b/src/app/authentication/admin/admin.component.html
@@ -5,6 +5,10 @@
 </div>
 
 <div class="container" *ngIf="!venueSelected">
+  <br>
+  <div class="row">
+    <button class="btn btn-info" id="newVenueBtn" (click)="onClick(null)">New Venue</button>
+  </div>
   <div class="row">
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let venue of venues; index as i" (click)="onClick(venue)">
@@ -59,7 +63,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="venueName" [(ngModel)]="venueToEdit.venueName" class="form-control"
-            placeholder="venueToEdit.venueName" />
+            placeholder="enter a venue name" />
         </div>
       </div>
       <div class="row">
@@ -68,7 +72,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="venueCity" [(ngModel)]="venueToEdit.city" class="form-control"
-            placeholder="venueToEdit.city" />
+            placeholder="enter a city" />
         </div>
       </div>
       <div class="row">
@@ -77,7 +81,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="size" [(ngModel)]="venueToEdit.size" class="form-control"
-            placeholder="venueToEdit.size" />
+            placeholder="enter a size" />
         </div>
       </div>
       <div class="row">
@@ -86,7 +90,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="capacity" [(ngModel)]="venueToEdit.capacity" class="form-control"
-            placeholder="venueToEdit.capacity" />
+            placeholder="enter a capacity" />
         </div>
       </div>
       <div class="row">
@@ -95,7 +99,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="desc" [(ngModel)]="venueToEdit.description" class="form-control"
-            placeholder="venueToEdit.description" />
+            placeholder="enter a description" />
         </div>
       </div>
       <div class="row">
@@ -104,7 +108,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="rating" [(ngModel)]="venueToEdit.rating" class="form-control"
-            placeholder="venueToEdit.rating" />
+            placeholder="enter a rating" />
         </div>
       </div>
       <div class="row">
@@ -113,7 +117,7 @@
         </div>
         <div class="col-8">
           <input mdbInput type="text" id="price" [(ngModel)]="venueToEdit.price" class="form-control"
-            placeholder="venueToEdit.price" />
+            placeholder="enter a price" />
         </div>
       </div>
       <div class="row">
