--- a/src/app/venues/details-page/read-details/read-details.component.html
+++ b/src/app/venues/details-page/read-details/read-details.component.html
@@ -63,7 +63,8 @@
 
           <label class="col-md-4 control-label" for="button"></label>
           <div class="col-md-8">
-            <button id="singlebutton" name="singlebutton" class="btn btn-primary" routerLink="book" >Book
+            <!-- <button id="singlebutton" name="singlebutton" class="btn btn-primary" routerLink="book" >Book -->
+            <button id="singlebutton" name="singlebutton" class="btn btn-primary" (click)="onSubmit()" >Book
               now!</button>
           </div>
 
