--- a/src/app/booking/book-now/book-now.component.html
+++ b/src/app/booking/book-now/book-now.component.html
@@ -6,7 +6,7 @@
     <div class="form-group" align="center">
       <label class="col-md-4 control-label" for="textinput">Card Name</label>  
       <div class="col-md-4">
-      <input id="Username" name="textinput" type="text" placeholder="username" class="form-control input-md" [(ngModel)]="username" pattern="[a-zA-Z ]*" required/>
+      <input id="Username" name="textinput" type="text" placeholder="Name on the card" class="form-control input-md" [(ngModel)]="username" pattern="[a-zA-Z ]*" required/>
       </div>
     </div>
     <div class="form-group" align="center">
