added new logo given by sdet

--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -2,7 +2,7 @@
 
   <div class="navbar-header">
     <a class="navbar-brand">
-      <img src="assets/logo.png" class="logo">
+      <img src="../../../../assets/logo-new.png" class="logo" style="height:60px;width:60px">
     </a>
     <span class="navbar-brand">Let's Work</span>
   </div>
