--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark nav" style="position:fixed;width:100%;top:0;height:auto;z-index: 998;">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark nav"
+  style="position:fixed;width:100%;top:0;height:auto;z-index: 998;">
 
   <div class="navbar-header">
     <a class="navbar-brand">
@@ -12,10 +13,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent" >
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" routerLink="/">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="display" (click)="submit1()">About Us</a>
